--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "disable-scroll": "^0.6.0",
+    "embla-carousel-autoplay": "^8.1.0",
+    "embla-carousel-react": "^8.1.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.376.0",
     "react": "^18.2.0",
